--- a/package/com.unity.formats.usd/package.json
+++ b/package/com.unity.formats.usd/package.json
@@ -28,5 +28,38 @@
         "url": "ssh://git@github.com:Unity-Technologies/usd-unity-sdk.git"
     },
     "unity": "2019.4",
-    "version": "2.0.0-exp.1"
+    "unityRelease": "4f1",
+    "version": "1.0.3-preview.1",
+    "samples": [
+      {
+        "displayName" : "ExportMesh",
+        "description" : "A sample showing how to record a scene to a USD file.",
+        "path": "Samples~/ExportMesh"
+      },
+      {
+        "displayName" : "HelloUsd",
+        "description" : "A sample showing how to write custom data to USDs.",
+        "path": "Samples~/HelloUsd"
+      },
+      {
+        "displayName" : "ImportMaterials",
+        "description" : "A sample showing how to import materials from a USD into Unity.",
+        "path": "Samples~/ImportMaterials"
+      },
+      {
+        "displayName" : "ImportMesh",
+        "description" : "A sample showing how to import a scene from USD into Unity.",
+        "path": "Samples~/ImportMesh"
+      },
+      {
+        "displayName" : "ImportProcessor",
+        "description" : "A sample showing how to implement pre- and post-import processors.",
+        "path": "Samples~/ImportProcessor"
+      },
+      {
+        "displayName" : "UsdTimelinePlayable",
+        "description" : "A sample showing how to use the USD integration in Timeline.",
+        "path": "Samples~/UsdTimelinePlayable"
+      }
+    ]
 }
