samples added (was different sample json format)

--- a/package/com.unity.formats.usd/package.json
+++ b/package/com.unity.formats.usd/package.json
@@ -29,5 +29,37 @@
     },
     "unity": "2018.3",
     "unityRelease": "4f1",
-    "version": "1.0.1-preview.2"
+    "version": "1.0.1-preview.2",
+    "samples": [
+      {
+        "displayName" : "ExportMesh",
+        "description" : "A sample showing how to record a scene to a USD file.",
+        "path": "Samples~/ExportMesh"
+      },
+      {
+        "displayName" : "HelloUsd",
+        "description" : "A sample showing how to write custom data to USDs.",
+        "path": "Samples~/HelloUsd"
+      },
+      {
+        "displayName" : "ImportMaterials",
+        "description" : "A sample showing how to import materials from a USD into Unity.",
+        "path": "Samples~/ImportMaterials"
+      },
+      {
+        "displayName" : "ImportMesh",
+        "description" : "A sample showing how to import a scene from USD into Unity.",
+        "path": "Samples~/ImportMesh"
+      },
+      {
+        "displayName" : "ImportProcessor",
+        "description" : "A sample showing how to implement pre- and post-import processors.",
+        "path": "Samples~/ImportProcessor"
+      },
+      {
+        "displayName" : "UsdTimelinePlayable",
+        "description" : "A sample showing how to use the USD integration in Timeline.",
+        "path": "Samples~/UsdTimelinePlayable"
+      }
+    ]
 }
