--- a/package/com.unity.formats.usd/package.json
+++ b/package/com.unity.formats.usd/package.json
@@ -21,7 +21,7 @@
       "usdz",
       "pipeline"
     ],
-    "name": "com.pfc.com.unity.formats.usd",
+    "name": "com.unity.formats.usd",
     "repoPackagePath": "package/com.unity.formats.usd",
     "repository": {
         "type": "git",
