--- a/package/com.unity.formats.usd/package.json
+++ b/package/com.unity.formats.usd/package.json
@@ -21,7 +21,7 @@
       "usdz",
       "pipeline"
     ],
-    "name": "com.pfc.com.unity.formats.usd",
+    "name": "com.unity.formats.usd",
     "repoPackagePath": "package/com.unity.formats.usd",
     "repository": {
         "type": "git",
@@ -29,7 +29,7 @@
     },
     "unity": "2018.3",
     "unityRelease": "4f1",
-    "version": "1.0.2-preview.1",
+    "version": "1.0.2-pfc.2",
     "samples": [
       {
         "displayName" : "ExportMesh",
