--- a/.gitignore
+++ b/.gitignore
@@ -64,4 +64,5 @@ TestProject/Logs
 TestProject/Assets/Plugins
 TestProject/Assets/Samples*
 inst-dbg/
+TestProject/.vs
 package/com.unity.formats.usd/TestRunnerOptions.json.meta
