--- a/.gitignore
+++ b/.gitignore
@@ -66,4 +66,5 @@ TestProject/Assets/Samples*
 inst-dbg/
 TestProject/.vs
 package/com.unity.formats.usd/Runtime/Scripts/IO/Geometry/.idea
+TestProject/Exports
 package/com.unity.formats.usd/TestRunnerOptions.json.meta
