--- a/package/com.unity.formats.usd/package.json
+++ b/package/com.unity.formats.usd/package.json
@@ -29,7 +29,7 @@
     },
     "unity": "2019.4",
     "unityRelease": "4f1",
-    "version": "1.0.3-pfc.9",
+    "version": "2.0.0-pfc",
     "samples": [
       {
         "displayName" : "ExportMesh",
